--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 requires-python = ">=3.9,<4.0"
 dependencies = [
   "kicad-python>=0.2.0",
+  "certifi>=2024.2.2",
 ]
 
 [dependency-groups]
