--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ build-backend = "hatchling.build"
 
 [project]
 name = "kicad-kicandy"
-version = "0.1.0"
+version = "0.0.0-dev"
 description = "KiCad 9 action plugin that inserts Material Symbols into silkscreen"
 authors = [{ name = "Steffen Beyer" }]
 readme = "README.md"
 requires-python = ">=3.9,<4.0"
+
 dependencies = [
   "kicad-python>=0.2.0",
   "certifi>=2024.2.2",
