--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dev = [
   "wxPython>=4.2.1",
 ]
 ci = [
+  "pytest>=8.3",
   "ruff>=0.3",
 ]
 
@@ -36,3 +37,9 @@ default-groups = ["dev"]
 line-length = 100
 target-version = "py39"
 lint.select = ["E", "F", "W", "B", "I", "UP", "ANN"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+markers = [
+  "download: tests that require live icon downloads.",
+]
